--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,24 +34,19 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
+      - uses: actions/setup-python@v3
+        with:
+          python-version: '3.9'
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: echo Hello, world!
 
       # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Run python script
         run: |
-          firstNum = ${{github.event.inputs.numOne}} python prime.py
-          lastNum = ${{github.event.inputs.numTwo}} python prime.py
-          
-#           echo Add other actions to build,
-#           echo test, and deploy your project.
-# run: |
-# #       echo "Store: ${{ github.event.inputs.myInput }}"
-# #       INPUT_STORE=${{ github.event.inputs.myInput }} python3 test.py
+          python prime.py firstNum = ${{github.event.inputs.numOne}} lastNum = ${{github.event.inputs.numTwo}}
