Add prime.py and added code in worflow dispatch

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,4 +49,4 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run python script
         run: |
-          py prime.py ${{github.event.inputs.numOne}} ${{github.event.inputs.numTwo}}
+          python prime.py ${{github.event.inputs.numOne}} ${{github.event.inputs.numTwo}}
