Added add.py and added code in both add.py to add numbers and main.yml to run python script add.py

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,10 @@
 # This is a basic workflow to help you get started with Actions
-
 name: GithubActions--Workflow-Dispatch-Input
 
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   # push:
-  #   branches: [ "main" ]
-  # pull_request:
   #   branches: [ "main" ]
 
   # Allows you to run this workflow manually from the Actions tab
@@ -19,14 +16,6 @@ on:
       numTwo:
         description: 'Enter second number:'
         required: true
-      # tags:
-      #   description: 'Test scenario tags'
-      #   required: false
-      #   type: boolean
-      # environment:
-      #   description: 'Environment to run tests against'
-      #   type: environment
-      #   required: true
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -42,11 +31,12 @@ jobs:
         with:
           python-version: 3.9
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
       # Runs a set of commands using the runners shell
-      - name: Run python script
+      - name: Run python script for prime number
         run: |
           python prime.py ${{github.event.inputs.numOne}} ${{github.event.inputs.numTwo}}
+
+      # Runs a single command using the runners shell
+      - name: Run python script for add number
+        run: |
+          python add.py ${{github.event.inputs.numOne}} ${{github.event.inputs.numTwo}}
