--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,8 +35,9 @@ jobs:
       - name: Run python script for prime number
         run: |
           python prime.py ${{github.event.inputs.numOne}} ${{github.event.inputs.numTwo}}
-
-      # Runs a single command using the runners shell
-      - name: Run python script for add number
-        run: |
           python add.py ${{github.event.inputs.numOne}} ${{github.event.inputs.numTwo}}
+
+      # # Runs a single command using the runners shell
+      # - name: Run python script for add number
+      #   run: 
+      #     p
