--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,9 @@ on:
       numTwo:
         description: 'Enter second number:'
         required: true
+env:
+  firstNum : ${{github.event.inputs.numOne}}
+  secondNum : ${{github.event.inputs.numTwo}}
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -30,9 +33,7 @@ jobs:
       - uses: actions/setup-python@v3
         with:
           python-version: 3.9
-        env:
-          firstNum : github.event.inputs.numOne
-          secondNum : github.event.inputs.numTwo
+        
       # Runs a set of commands using the runners shell
       - name: Run python script for prime number
         run: |
