--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
           python-version: 3.9
         
       # Runs a set of commands using the runners shell
-      - name: Run python script for prime number
+      - name: Run python script for prime number and add number
         run: |
           python prime.py $firstNum $secondNum
           python add.py $firstNum $secondNum
