--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,6 @@
-# This is a basic workflow to help you get started with Actions
 name: GithubActions--Workflow-Dispatch-Input
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
-  # push:
-  #   branches: [ "main" ]
-
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
     inputs:
       numOne:
@@ -16,31 +9,22 @@ on:
       numTwo:
         description: 'Enter second number:'
         required: true
+
 env:
   firstNum : ${{github.event.inputs.numOne}}
   secondNum : ${{github.event.inputs.numTwo}}
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  pythonScripts:
     runs-on: ubuntu-latest
-    # Steps represent a sequence of tasks that will be executed as part of the job
+
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v3
         with:
           python-version: 3.9
         
-      # Runs a set of commands using the runners shell
       - name: Run python script for prime number and add number
         run: |
           python prime.py $firstNum $secondNum
           python add.py $firstNum $secondNum
-
-      # # Runs a single command using the runners shell
-      # - name: Run python script for add number
-      #   run: 
-      #     p
